[ref #25] Add system sizing example

--- a/examples/example_02_electrolyzer/example_run.ipynb
+++ b/examples/example_02_electrolyzer/example_run.ipynb
@@ -50,6 +50,16 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "29b6596a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fname_input_modeling = \"./modeling_options.yaml\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "4b536aa0",
    "metadata": {},
    "outputs": [
@@ -68,8 +78,6 @@
     }
    ],
    "source": [
-    "fname_input_modeling = \"./modeling_options.yaml\"\n",
-    "\n",
     "elec_sys, result_df = run_electrolyzer(fname_input_modeling, power_test_signal)"
    ]
   },
@@ -338,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "c05b73d8",
    "metadata": {},
    "outputs": [
